sql/test/error/error10.exp


select * from t1 order by b;
       ^
       |
        ----- ERROR
Error: line 3, characters 8-8:
invalid ORDER BY, unbound name b
